# LO21---Printemps-2021---Projet-Cellulut

./: .gitignore  CMakeLists.txt  Cellulut_project.pro  Cellulut_project.pro.user.2ae90a8  Cellulut_project.pro.user.4398c66  Cellulut_project.pro.user.7b77c0d  Cellulut_project.pro.user.c1b9f6e  ChoixVoisinage.cpp  ChoixVoisinage.h  MenuModele.ui  Modele.cpp  Modele.h  README.md  UML.graphmlz  UML_cellulut.graphml  affichage_info.cpp  affichage_info.h  auto_cell.files  automate.cpp  automate.h  chargerModele.cpp  chargerModele.h  choixEtats.cpp  choixEtats.h  choixTransition.cpp  choixTransition.h  choix_modele.cpp  choix_modele.h  choix_modele.ui  config.h  config.ui  configuration.cpp  configuration.h  creaconfig.cpp  creaconfig.h  creaconfig.ui  creation_etat.ui  def_etats.ui  description_XML.txt  etat.cpp  (+46 more)
Modeles/: GRIFFEATH.xml  LANGSTONLOOP.xml  LEBONNNNGR.xml  LUILA.xml  ModeleBrian.xml  ModeleGriffeath.xml  ModeleLangton.xml  ModeleLifeGame.xml  ORANGE.xml  TEST.xml  TESTLLOOP.xml  TEST_2.xml  TEST_3.xml  TEST_4.xml  asyla.xml  ee.xml  lebonGriff.xml  main.cpp  modele 1.xml  testLolo3.xml
